package zoot.tds.entrees;

public class EntreeVariable extends Entree {
    public EntreeVariable(String identifiant) {
        super(identifiant);
    }

    /**
     * {@inheritDoc}
     */
    @Override
    public boolean equals(Object entreeAComparer) {
        return super.equals(entreeAComparer);
    }
}
